src/test/resources/test-compile-data/jvm/KotlinWebSiteSnippetsTests/sequences/0.kt
fun main() {
//sampleStart
    val oddNumbers = generateSequence(1) { it + 2 } // `it` is the previous element
    println(oddNumbers.take(5).toList())
    //println(oddNumbers.count())     // error: the sequence is infinite
//sampleEnd
}